Add asset attachment endpoints
